zoom and tooltip added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
     <meta charset="UTF-8" />
     <!-- Load d3.js -->
     <script src="https://d3js.org/d3.v6.js"></script>
+    <style>
+      .focus circle {
+        fill: steelblue;
+    }
+
+    .focus text {
+        font-size: 14px;
+    }
+
+    .tooltip {
+        fill: white;
+        stroke: #000;
+    }
+
+    .tooltip-date, .tooltip-pressure {
+        font-weight: bold;
+        overflow-wrap: break-word;
+    }
+    .hidden {
+      display: none;
+    }
+
+    </style>
   </head>
 
   <body>
